Add "Network status and alerts" page and RSS feed Generate alerts pages through translate.rb plugin Update sitemap plugin to include alerts

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -591,6 +591,27 @@ li{
 .versiontext li>p{
 	margin:0px;
 }
+.rssicon{
+	vertical-align:bottom;
+	margin-bottom:9px;
+	margin-left:10px;
+}
+.alertstatusinactive{
+	font-size:130%;
+	color:#0d579b;
+	margin-bottom:30px;
+}
+.alertstatusactive{
+	font-size:130%;
+	color:#d57700;
+	margin-bottom:30px;
+}
+.alertsactive{
+	margin-bottom:20px;
+}
+.alertsactive a{
+	font-weight:bold;
+}
 
 .download a{
 	font-size:125%;
