--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -91,7 +91,7 @@ menu:
         <a href="/{{ page.lang }}/{% translate support-bitcoin url %}"><img src="/img/but_involve.svg" alt="Icon">{% translate button-support layout %}</a>
       </div>
     </div>
-    <div id="footer"><div>{% translate footer layout %}</div></div>
+    <div id="footer"><div><a href="/en/alerts">Network Status & Alerts</a> - {% translate footer layout %}</div></div>
   </div>
   <script type="text/javascript">svgfallback();</script>
 </body>
